fix button small on cards mobile

--- a/src/assets/css/_page_pricing--hero.scss
+++ b/src/assets/css/_page_pricing--hero.scss
@@ -123,12 +123,13 @@
 
         @media only screen and (max-width: 576px) {
             width: 275px;
+            height: 470px;
             padding: 24px;
         }
 
         @media only screen and (max-width: 350px) {
             width: 240px;
-            height: 480px;
+            height: 485px;
             padding: 24px;
         }
 
